I added a solution to the second problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,5 @@ add_executable(task_1.1 Homework1/task_1.c)
 add_executable(task_1.2 Homework1/task_2.c)
 
 add_executable(task_1.3 Homework1/task_3.c)
+
+add_executable(task_2.2 Homework2/task_2.2.c Homework2/list.c)
