I added a solution to the first problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,5 @@ add_executable(task_2.1 Homework2/task_2.1.c Homework2/dictionary.c)
 
 add_executable(test_task_1 Testwork1/test_task_1.c Testwork1/vector.c)
 add_executable(test_task_2 Testwork1/test_task_2.c Testwork1/list.c)
+
+add_executable(task_4.1 Homework4/task_4.1.c Homework4/mergeSort.c)
