I added a solution to the second problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,5 @@ add_executable(test_task_1 Testwork1/test_task_1.c Testwork1/vector.c)
 add_executable(test_task_2 Testwork1/test_task_2.c Testwork1/list.c)
 
 add_executable(task_3.1 Homework3/task_3.1.c Homework3/binary_number.c)
+
+add_executable(task_6.2 Homework6/task_6.2.c Homework6/values.c Homework6/list.c Homework6/hash_map.c)
