--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,4 @@ add_executable(test_task_2 Testwork1/test_task_2.c Testwork1/list.c)
 
 add_executable(task_3.1 Homework3/task_3.1.c Homework3/binary_number.c)
 
-add_executable(test_task_2.2 Testwork2/test_task_2.2.c Testwork2/mergeSort.c)
+add_executable(test_task_2.2 Testwork2/test_task_2.2.c)
