--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,5 @@ add_executable(test_task_2 Testwork1/test_task_2.c Testwork1/list.c)
 add_executable(task_3.1 Homework3/task_3.1.c Homework3/binary_number.c)
 
 add_executable(test_task_2.1 Testwork2/test_task_2.1.c)
+
+add_executable(task_5.2 Homework5/task_5.2.c Homework5/AVL_tree.c Homework5/values.c Homework5/list.c)
