I changed CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@ set(CMAKE_C_STANDARD 11)
 set(SOURCE_LIB
     library/commonUtils/numericOperations.c
 )
+set(SOURCE_LIB
+        library/commonUtils/list.c
+        )
+set(SOURCE_LIB
+        library/commonUtils/values.c
+        )
 add_library(library ${SOURCE_LIB})
 
 add_executable(task_1.5 Homework1/task_5.c)
@@ -32,4 +38,4 @@ add_executable(task_3.1 Homework3/task_3.1.c Homework3/binary_number.c)
 
 add_executable(test_task_2.1 Testwork2/test_task_2.1.c)
 
-add_executable(task_8.2 Homework8/task_8.2.c Homework8/automaton.c Homework8/list.c Homework8/values.c)
+add_executable(task_8.2 Homework8/task_8.2.c Homework8/automaton.c)
