I added a solution to the first problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,5 @@ target_link_libraries(task_8.2 library)
 
 add_executable(retest_1.3 Retest1/retest_task_1.3.c)
 
+add_executable(final_task_1 Final/final_task_1.c)
+target_link_libraries(final_task_1 library)
